qt_add_executable(emulator main.cpp)
qt_add_library(chip8 SHARED chip8.cpp display.cpp memory.cpp)
qt_add_library(widget SHARED EmulationScreenWidget.cpp)
qt_add_library(main_window SHARED  mainwindow.cpp mainwindow.ui)
target_link_libraries(widget PUBLIC Qt6::Widgets)
target_link_libraries(chip8 PUBLIC Qt6::Widgets)
target_link_libraries(main_window PUBLIC Qt6::Widgets chip8 widget)
target_link_libraries(emulator PUBLIC main_window)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
