qt_add_executable(emulator main.cpp)
# qt_add_library(chip8 SHARED chip8.cpp display.cpp memory.cpp)
qt_add_library(screen SHARED display.cpp)
qt_add_library(memory SHARED memory.cpp)
qt_add_library(chip8 SHARED chip8.cpp)
qt_add_library(widget SHARED EmulationScreenWidget.cpp)
qt_add_library(main_window SHARED  mainwindow.cpp mainwindow.ui)
target_link_libraries(screen PRIVATE Qt6::Core)
target_link_libraries(chip8 PRIVATE Qt6::Core screen memory)
target_link_libraries(widget PRIVATE Qt6::Widgets)
# target_link_libraries(chip8 PUBLIC Qt6::Widgets)
target_link_libraries(main_window PUBLIC Qt::Widgets chip8 widget)
target_link_libraries(emulator PRIVATE main_window)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
